--- a/RedditVideoGenerator/packages.config
+++ b/RedditVideoGenerator/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net48" />
+  <package id="Reddit" version="1.5.2" targetFramework="net48" />
+  <package id="RestSharp" version="106.6.9" targetFramework="net48" />
   <package id="System.Drawing.Common" version="6.0.0" targetFramework="net48" />
   <package id="WPF-UI" version="2.0.3" targetFramework="net48" />
 </packages>
