--- a/RedditVideoGenerator/packages.config
+++ b/RedditVideoGenerator/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="HtmlTextBlock" version="1.0.1" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net48" />
   <package id="Reddit" version="1.5.2" targetFramework="net48" />
