--- a/RedditVideoGenerator/RedditVideoGenerator.csproj
+++ b/RedditVideoGenerator/RedditVideoGenerator.csproj
@@ -82,10 +82,17 @@
     <Compile Include="Controls\CommentCard.xaml.cs">
       <DependentUpon>CommentCard.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\TitleCard.xaml.cs">
+      <DependentUpon>TitleCard.xaml</DependentUpon>
+    </Compile>
     <Compile Include="HtmlRichTextBoxBehavior.cs" />
     <Compile Include="RedditFunctions.cs" />
     <Compile Include="TypeExtensions.cs" />
     <Page Include="Controls\CommentCard.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Controls\TitleCard.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
