Added About Window

--- a/RedditVideoGenerator/RedditVideoGenerator.csproj
+++ b/RedditVideoGenerator/RedditVideoGenerator.csproj
@@ -109,6 +109,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AboutWindow.xaml.cs">
+      <DependentUpon>AboutWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="AlphanumComparatorFast.cs" />
     <Compile Include="Controls\CommentCard.xaml.cs">
       <DependentUpon>CommentCard.xaml</DependentUpon>
@@ -122,6 +125,10 @@
     <Compile Include="HtmlRichTextBoxBehavior.cs" />
     <Compile Include="RedditFunctions.cs" />
     <Compile Include="TypeExtensions.cs" />
+    <Page Include="AboutWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Controls\CommentCard.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
