Implemented auto update system

--- a/RedditVideoGenerator/packages.config
+++ b/RedditVideoGenerator/packages.config
@@ -15,6 +15,7 @@
   <package id="NAudio.WinForms" version="2.1.0" targetFramework="net48" />
   <package id="NAudio.WinMM" version="2.1.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net48" />
+  <package id="Octokit" version="4.0.3" targetFramework="net48" />
   <package id="Reddit" version="1.5.2" targetFramework="net48" />
   <package id="RestSharp" version="106.6.9" targetFramework="net48" />
   <package id="System.Drawing.Common" version="6.0.0" targetFramework="net48" />
