Added unique video generation and modified auto update system

--- a/RedditVideoGenerator/App.config
+++ b/RedditVideoGenerator/App.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+            <section name="RedditVideoGenerator.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
@@ -11,4 +16,16 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <userSettings>
+    <RedditVideoGenerator.Properties.Settings>
+      <setting name="GeneratedPostIds" serializeAs="Xml">
+        <value>
+          <ArrayOfString xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" />
+        </value>
+      </setting>
+      <setting name="UpgradeRequired" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </RedditVideoGenerator.Properties.Settings>
+  </userSettings>
 </configuration>
