--- a/RedditVideoGenerator/packages.config
+++ b/RedditVideoGenerator/packages.config
@@ -7,6 +7,8 @@
   <package id="HtmlToXamlConverter" version="1.0.5727.24510" targetFramework="net48" />
   <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net48" />
   <package id="Microsoft.Win32.Registry" version="4.7.0" targetFramework="net48" />
+  <package id="Microsoft.WindowsAPICodePack-Core" version="1.1.0.0" targetFramework="net48" />
+  <package id="Microsoft.WindowsAPICodePack-Shell" version="1.1.0.0" targetFramework="net48" />
   <package id="NAudio" version="2.1.0" targetFramework="net48" />
   <package id="NAudio.Asio" version="2.1.0" targetFramework="net48" />
   <package id="NAudio.Core" version="2.1.0" targetFramework="net48" />
