--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ RedditVideoGenerator/APIKeys.cs
 RedditVideoGenerator/bin
 RedditVideoGenerator/client_secret.json
 RedditVideoGenerator/Resources/client_secret.json
+RedditVideoGenerator/RedditAPIKeys.cs
