Added docs button and replaced outro video

--- a/RedditVideoGenerator/RedditVideoGenerator.csproj
+++ b/RedditVideoGenerator/RedditVideoGenerator.csproj
@@ -322,7 +322,7 @@
     <Content Include="Resources\NotoSans\OFL.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="Resources\TransparentChannelIcon.png">
+    <Content Include="Resources\ChannelIcon.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Resources\AlegreyaSans\OFL.txt">
